2024-02-27T16:07:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8067777027 # 155
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
* notice: last 14d: unq all: 1 14
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 346 717
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 346 718
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-27]

2024-02-27T08:08:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8061508847 # 154
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
* notice: last 14d: unq all: 1 13
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 345 716
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 346 717
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-27]

2024-02-26T16:08:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8051958925 # 152
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-26
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 345 715
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 345 716
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-26]

2024-02-26T08:08:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8045576828 # 151