@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-27T16:07:52Z",
+  "timestamp" : "2024-02-28T08:08:17Z",
   "count_outdated" : 704,
   "uniques_outdated" : 338,
-  "count" : 718,
-  "uniques" : 346,
+  "count" : 719,
+  "uniques" : 347,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
