@@ -1,3 +1,12 @@
+2024-02-28T08:08:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8077167162 # 157
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-28
+* notice: last 14d: unq all: 1 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 346 718
+* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 347 719
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-02-28]
+
 2024-02-27T16:07:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8067777027 # 155
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
